# framework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/ciel/: __init__.py
src/ciel/asgi/: typing.py
src/ciel/core/: __init__.py  application.py  config.py  dependency_injection.py  service_provider.py
src/ciel/core/dependency_injection/: __init__.py  container.py  injector.py
src/ciel/core/http/: http_service.py
src/ciel/core/meta/: __init__.py  container.py  facade.py  import_util.py  injector.py
src/ciel/core/module/: __init__.py  module.py  register.py
src/ciel/core/util/: import_util.py
src/ciel/http/: __init__.py  facades.py  facades.pyi  http_objects.py  kernel.py  module.py  routing.py
tests/ciel_tests/: __init__.py
tests/ciel_tests/core/: __init__.py
tests/ciel_tests/core/dependency_injection/: __init__.py  test_container.py  test_facade.py  test_injector.py
tests/ciel_tests/core/module/: __init__.py  test_register.py
tests/ciel_tests/http/: __init__.py  test_http_objects.py
