[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ciel"
version = "0.0.1"
authors = [
  { name="Mathilde PASCAL" },
]
description = "Another web framework"
readme = "README.md"
requires-python = ">=3.13"
classifiers = []
license = "LGPL-3.0"
license-files = ["LICENSE.md", "LICENSE.GPL.md"]

[project.urls]
Homepage = "https://github.com/ciel-framework/framework"
Issues = "https://github.com/ciel-framework/framework/issues"